github pages final fix

--- a/package.json
+++ b/package.json
@@ -12,9 +12,7 @@
     "lint": "eslint .",
     "preview": "vite preview",
     "test": "vitest run",
-    "test:watch": "vitest",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d dist"
+    "test:watch": "vitest"
 
   },
   "dependencies": {
